--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,13 +1,15 @@
 .Header{
     width: 100%;
+    height: 50px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     color: black;
     padding: 10px;
     padding-left: 15px;
     background: white;
     border-bottom: solid 1px black;
-    margin-bottom: 30px;
+    margin-bottom: 0;
 }
 .shoppingBag{
     width: 25px;
