--- a/src/Components/Market/Market.css
+++ b/src/Components/Market/Market.css
@@ -1,7 +1,77 @@
+*{
+    box-sizing: border-box;
+}
+
 .market-container {
     text-align: center;
+    display: flex;
+    margin: 0;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    background: no-repeat fixed url('http://auctionfire.com/wp-content/uploads/2017/11/52afd056-01ab-11e2-8aaa-00144feabdc0.jpg')
 }
+
 .market-container h1 {
-    color: grey;
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 15px;
+    font-weight: bold;
+    font-size: 4.3em;
+    letter-spacing: .15em;
+    width: 100%;
 }
+
+.item-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 35px;
+    background-color: rgba(233, 230, 230, 0.8);
+    height: 570px;
+    width: 630px;
+    font-size: 1.4em;
+    
+}
+
+.item-container a{
+    color: black;
+}
+
+.item-container .price, .name{
+    font-weight: bold;
+    margin-bottom: 0;
+    margin-top: 7px;
+    font-size: 1.4em;
+}
+
+.item-container .name{
+    font-size: 1.7em;
+    letter-spacing: .1em;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+.item-container .description{
+    margin-top: 10px;
+    margin-bottom: 35px;
+}
+
+.item-container button{
+    padding: 15px;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 1em;
+    background-color: rgb(127, 175, 108);
+}
+
+.item-image{
+    height: 280px;
+    width: 280px;
+    margin: 10px;
+    background-image: url('https://vignette.wikia.nocookie.net/stranded-deep/images/0/01/Hoe_Crude_Icon.png/revision/latest?cb=20171001235136')
+}
+
+
