--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,21 +1,24 @@
-.Header{
+ .Header{
     width: 100%;
     display: flex;
     justify-content: space-between;
-    color: black;
     padding: 10px;
     padding-left: 15px;
-    background: white;
     border-bottom: solid 1px black;
-    margin-bottom: 30px;
+    background-color: rgba(255, 255, 255, 0.5);
+    position: fixed;
+    margin: -86px 0px 11px -8px;
+    z-index:  1;
+    padding-bottom: 24px;
 }
 .shoppingBag{
     width: 25px;
     height: 25px;
     background-size: cover;
     background-repeat: no-repeat;
-    margin-right: 20px;
+    margin-right:  38px;
     position: relative;
+    margin-top: 13px;
 }
 
 .shoppingBag:hover{
@@ -25,15 +28,21 @@
     font-size: 10px;
     position: absolute;
     width: 100%;
-    top: 35%;
-    left: 0%;
+    top: 31%;
+    left: -4%;
     right: 39%;
     text-align: center;
 }
 a{
     text-decoration: none;
+    color: black;
 }
 .homeButton{
+    padding-top: 20px;
     color: black;
+    font-weight: bold;
+}
 
+.homeButton:hover {
+    color: darkgrey;
 }
