--- a/src/Components/Market/Market.css
+++ b/src/Components/Market/Market.css
@@ -1,7 +1,88 @@
 .market-container {
     text-align: center;
+    margin-top: 85px;
 }
 .market-container h1 {
-    color: grey;
-    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+}
+
+.itemContainer {
+    display:  flex;
+    justify-content:  space-evenly;
+    flex-wrap:  wrap;
+}
+
+.item-container {
+    border-radius: 12px;
+    margin: 13px;
+    padding: 13px;
+    -ms-flex-preferred-size: 186px;
+    flex-basis: 230px;
+    /* -webkit-box-shadow: 2px 2px grey;
+    box-shadow: 2px 2px grey; */
+    font-weight: bold;
+    position: relative;
+    cursor: pointer;
+    padding-bottom: 20px;
+}
+.loading {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  button {
+    background-color:#4286F5;
+    border-style: none;
+    border-radius:  14px;
+    padding: 8px;
+    cursor: pointer;
+    margin-top: 13px;
+    color: white;
+}
+
+button:hover {
+    background: turquoise;
+}
+
+.item-image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    border-radius: 13px;
+  }
+  
+  .item-contents-text {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    top: 103px;
+  }
+  
+  .item-contents:hover .item-image {
+    opacity: 0.5;
+  }
+  
+  .item-contents:hover .item-contents-text {
+    opacity: 1;
+  }
+
+  p {
+    color: black;
+  }
+
+  h2 {
+      color: black;
+  }
+
+  p.product-description {
+    text-align:  left;
 }
