--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,11 +1,12 @@
 .Header{
     width: 100%;
+    display: -ms-flexbox;
     display: flex;
     justify-content: space-between;
     color: black;
     padding: 10px;
     padding-left: 15px;
-    background: white;
+    background: #52cdd8;
     border-bottom: solid 1px black;
     margin-bottom: 30px;
 }
