--- a/src/Components/Market/Market.css
+++ b/src/Components/Market/Market.css
@@ -1,7 +1,34 @@
 .market-container {
     text-align: center;
+    background-color: #00554c;
+
 }
 .market-container h1 {
     color: grey;
     font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.item-container {
+    background: #0f152a;
+    margin-bottom: 10px;
+}
+
+
+p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
+
+}
+
+.h1 {
+    font-size: 12px;
+    margin-bottom: -31px;
+}
+
+button { 
+    height: 25px;
+    width: 100px;
+    margin-bottom: 12px;
+
 }
