--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -6,7 +6,7 @@
     color: black;
     padding: 10px;
     padding-left: 15px;
-    background: #52cdd8;
+    background: #b09876;
     border-bottom: solid 1px black;
     margin-bottom: 30px;
 }
@@ -37,4 +37,11 @@ a{
 .homeButton{
     color: black;
 
+}
+
+h1 {
+    font-size: 40px;
+    font-family: fantasy;
+    
+    
 }
