--- a/src/Components/Market/Market.css
+++ b/src/Components/Market/Market.css
@@ -1,10 +1,10 @@
 .market-container {
     text-align: center;
-    background-color: #00554c;
+    background-color: #f7f8f8;
 
 }
 .market-container h1 {
-    color: grey;
+    color: #0f152a;
     font-family: Arial, Helvetica, sans-serif;
 
 }
