Added loading image

--- a/src/Components/Market/Market.css
+++ b/src/Components/Market/Market.css
@@ -10,17 +10,19 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    background: no-repeat fixed url('http://auctionfire.com/wp-content/uploads/2017/11/52afd056-01ab-11e2-8aaa-00144feabdc0.jpg')
+    background: no-repeat fixed url('http://auctionfire.com/wp-content/uploads/2017/11/52afd056-01ab-11e2-8aaa-00144feabdc0.jpg');
 }
 
-.market-container h1 {
+.market-title {
+    display: flex;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 15px;
-    font-weight: bold;
-    font-size: 4.3em;
     letter-spacing: .15em;
     width: 100%;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 4.3em;
 }
 
 .item-container{
