--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -9,7 +9,7 @@
     padding-left: 15px;
     background: white;
     border-bottom: solid 1px black;
-    margin-bottom: 0;
+    margin-bottom: 0px;
 }
 .shoppingBag{
     width: 25px;
